syntax = "proto3";

option csharp_namespace = "GrpcClient.Protos";

package person;

service PersonProto{
	rpc GetAll(PersonRequest) returns (PersonResponse); 
}

message PersonRequest {
	int32 id =1;
}


message PersonResponse {
	int32 id =1;
	string FirstName = 2;
	string LastName = 3;
}
